# cmake-game-lib-skeleton

./: .gitignore  ReadMe.md  clean.bat  clean.sh  run.bat  run.sh
MyEngine/: CMakeLists.txt
MyEngine/include/MyEngine/: MyEngine.h
MyEngine/src/: MyEngine.cpp
MyGame/: CMakeLists.txt
MyGame/cmake/: FindMyEngine.cmake  MyEngineConfig-debug.cmake  MyEngineConfig-release.cmake  MyEngineConfig.cmake
MyGame/src/: main.cpp
